# psub2

./: CMakeLists.txt  README.md
src/: p2_2main.cpp  p2main.cpp  pmain.cpp  psub2_1.cpp  psub2_2.cpp  s2_2main.cpp  s2main.cpp  smain.cpp  sub.cpp  sub2.cpp  sub2_2.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
